[gd_scene load_steps=10 format=3 uid="uid://b2vrnra2k4b62"]

[ext_resource type="Script" uid="uid://bpaaursrp8ll0" path="res://Scripts/clover.gd" id="1_aiwxb"]
[ext_resource type="PackedScene" uid="uid://bxmjgaqbmcpmf" path="res://Scenes/killzone.tscn" id="2_aiwxb"]
[ext_resource type="Texture2D" uid="uid://7unu6cpkdyak" path="res://Assets/sprites/EnemySprites/cloverIdle.png" id="2_e75hx"]
[ext_resource type="Texture2D" uid="uid://durhawqgmqonb" path="res://Assets/sprites/EnemySprites/cloverSpiked.png" id="3_rmcxx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rmcxx"]
atlas = ExtResource("2_e75hx")
region = Rect2(0, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6fci"]
atlas = ExtResource("2_e75hx")
region = Rect2(19, 0, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxew5"]
atlas = ExtResource("3_rmcxx")
region = Rect2(0, 0, 19, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_e388w"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_rmcxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6fci")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxew5")
}],
"loop": true,
"name": &"Spiked",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_r4o34"]
radius = 6.0

[node name="Clover" type="Node2D"]
script = ExtResource("1_aiwxb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_e388w")
animation = &"Spiked"
autoplay = "Idle"

[node name="KillzoneScript_Area" parent="." instance=ExtResource("2_aiwxb")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillzoneScript_Area"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_r4o34")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
rotation = -1.5708
target_position = Vector2(-4.76837e-07, 8)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
rotation = 1.5708
target_position = Vector2(-4.76837e-07, 8)
